- Fixed bug #50383 (Exceptions thrown in __call / __callStatic do not include file and line in trace)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@295913 c90b9560-bf6c-de11-be94-00142212c4b1